--- a/src/app/css/components/_burger.css
+++ b/src/app/css/components/_burger.css
@@ -20,7 +20,7 @@ button:focus {
 }
 
 .burger-bar {
-  @apply absolute top-1/2 right-[6px] left-[6px] h-[2px] w-auto;
+  @apply absolute top-1/2 right-[6px] left-[6px] h-[2px] w-auto bg-black;
   margin-top: -1px;
   transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1),
     opacity 0.3s cubic-bezier(0.165, 0.84, 0.44, 1),
@@ -53,7 +53,7 @@ button:focus {
 }
 
 #burger.active .burger-bar {
-  @apply bg-white;
+  @apply bg-black;
 }
 
 #burger.active .burger-bar--1 {
